Fixed bug invisible datatables sort icons.

--- a/land/copernicus/theme/skins/copernicus_theme_styles/copernicusLand.css
+++ b/land/copernicus/theme/skins/copernicus_theme_styles/copernicusLand.css
@@ -269,7 +269,6 @@ dl.portlet a:link,
     padding-left: 15px;
 }
 #content-core table th {
-    background: #DDD;
     border: 1px solid #999;
     padding: 2px 5px;
 }
